# datasoup

./: .gitignore  LICENSE  README.md  pyproject.toml
datasoup/: keys.py
datasoup/small_sample_experiments/: data_gen.py  notebook.ipynb
datasoup/sql_generator/: agents.py
datasoup/sql_generator/db/: db.sql  db_metadata.json  db_utils.py
