[tool.poetry]
name = "datasoup"
version = "0.1.0"
description = "companion to Data Soup substack"
authors = ["James Davis <jamesmariodavis@gmail.com>"]
readme = "README.md"
packages = [{ include = "datasoup" }]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.2"
plotly = ">=5.23"
scikit-learn = ">=1.5"
xgboost = ">=2.1"
lightgbm = ">=4.5"
statsmodels = ">=0.14"
jupyter = "^1.0.0"
kaleido = "0.2.1"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
faker = "^28.0.0"
langchain = "^0.2.15"
langchain-anthropic = "^0.1.23"
langchain-openai = "^0.1.23"
sentence-transformers = "^3.0.1"


[tool.pyright]
reportMatchNotExhaustive = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = true


[tool.black]
line-length = 140


[tool.ruff]
line-length = 140


[tool.ruff.lint]
select = ["ALL"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
